--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -8,13 +8,11 @@
 
    <packaging>war</packaging>
 
+   <properties>
+      <spring.version>4.1.4.RELEASE</spring.version>
+   </properties>
+
    <dependencies>
-      <dependency>
-         <groupId>junit</groupId> 
-         <artifactId>junit</artifactId> 
-         <version>4.12</version> 
-         <scope>test</scope>   
-      </dependency>
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
@@ -26,6 +24,33 @@
          <artifactId>jstl</artifactId>
          <version>1.2</version>
          <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-web</artifactId>
+         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-jdbc</artifactId>
+         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <version>1.4.197</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-test</artifactId>
+         <version>${spring.version}</version>
+         <scope>test</scope> 
+      </dependency>
+      <dependency>
+         <groupId>junit</groupId> 
+         <artifactId>junit</artifactId> 
+         <version>4.12</version> 
+         <scope>test</scope>   
       </dependency>
    </dependencies>
 
